--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required( VERSION 3.21 FATAL_ERROR )
 
 project(
 	fHash
-	VERSION     1.0
-	DESCRIPTION "A hashing library."
+	VERSION     1.1
+	DESCRIPTION "A FALK library module for hashing."
 	LANGUAGES   CXX
 )
 
@@ -13,8 +13,8 @@ cmake_policy ( SET                  CMP0069       NEW )
 set          ( CMAKE_POLICY_DEFAULT_CMP0069       NEW )
 
 set ( HEADERS
-	core.hh
-	info.hh
+	core.h
+	info.h
 	# ^--- add sources here
 )
 
@@ -23,15 +23,10 @@ target_sources             ( ${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DI
 target_include_directories ( ${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include )
 
 configure_file ( # for exporting info to C++ (e.g. project version)
-	${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}/info.hh.in
-	${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}/info.hh
+	${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}/info.h.in
+	${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}/info.h
 )
 
 # target_compile_features ( ${PROJECT_NAME} PUBLIC cxx_std_23                                        ) # Set C++ standard to C++2b
 # target_compile_options  ( ${PROJECT_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/permissive->" ) # To help ensure cross-platform compatibility
 # set_target_properties   ( ${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF                            ) # Ditto
-
-#--------------------------- External dependencies: ----------------------------#
-# include ( cmake/CPM.cmake )
-# CPMAddPackage( "gh:X/Y#Z"  )
-# target_link_libraries ( fRNG PRIVATE y::y ) # <- add library dependency targets here
