--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set ( HEADERS
 )
 # OLD # include                    ( GNUInstallDirs )
 add_library                ( ${PROJECT_NAME} INTERFACE )
-target_sources             ( ${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}/${HEADERS} )
+target_sources             ( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}/${HEADERS} )
 target_compile_features    ( ${PROJECT_NAME} INTERFACE cxx_std_23 )
 target_include_directories ( ${PROJECT_NAME} include/ )
 # OLD # target_include_directories ( ${PROJECT_NAME} INTERFACE
