--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,16 @@
-cmake_minimum_required ( VERSION 3.21 FATAL_ERROR )
+#pragma once
+cmake_minimum_required ( VERSION 3.21 FATAL_ERROR ) # TODO: expand version range
 
 project (
 	fHash
-	VERSION     0.1.0
+	VERSION     0.1
 	DESCRIPTION "A FALK library module for hashing."
 	LANGUAGES   CXX
 )
 
 configure_file ( # for exposing info to C++ (e.g. project version)
-	${CMAKE_CURRENT_SOURCE_DIR}/cmake/info.h.in
-	${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}/info.h
+	include/${PROJECT_NAME}/info.h.in
+	include/${PROJECT_NAME}/info.h
 )
 
 set          ( CMAKE_POSITION_INDEPENDENT_CODE     ON ) # -fPIC
@@ -20,8 +21,6 @@ set          ( CMAKE_POLICY_DEFAULT_CMP0069       NEW )
 set ( HEADERS core.h info.h )
 
 add_library                ( ${PROJECT_NAME} INTERFACE )
-target_sources             ( ${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}/${HEADERS} )
+target_sources             ( ${PROJECT_NAME} INTERFACE include/${PROJECT_NAME}/${HEADERS} )
 target_compile_features    ( ${PROJECT_NAME} INTERFACE cxx_std_23 )
 target_include_directories ( ${PROJECT_NAME} INTERFACE include/ )
-
-# TODO: include guard
