--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ project (
 )
 
 configure_file ( # for exposing info to C++ (e.g. project version)
-	include/${PROJECT_NAME}/info.h.in
-	include/${PROJECT_NAME}/info.h
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}/info.hh.in"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}/info.hh"
 )
 
 set          ( CMAKE_POSITION_INDEPENDENT_CODE     ON ) # -fPIC
@@ -18,9 +18,7 @@ set          ( CMAKE_INTERPROCEDURAL_OPTIMIZATION  ON )
 cmake_policy ( SET                  CMP0069       NEW )
 set          ( CMAKE_POLICY_DEFAULT_CMP0069       NEW )
 
-set ( HEADERS core.h info.h )
-
+add_subdirectory           ( "include/${PROJECT_NAME}/" )
 add_library                ( ${PROJECT_NAME} INTERFACE )
-target_sources             ( ${PROJECT_NAME} INTERFACE include/${PROJECT_NAME}/${HEADERS} )
 target_compile_features    ( ${PROJECT_NAME} INTERFACE cxx_std_23 )
-target_include_directories ( ${PROJECT_NAME} INTERFACE include/ )
+target_include_directories ( ${PROJECT_NAME} INTERFACE "include/" )
